--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -8,11 +8,11 @@ Proving the progress of expressions and the preservation of types proves the typ
 
 Progress will be proven by structural induction on a well-typed, closed expression of each syntactic form.  In each case, the expression will be proven to be either an unforced value, reducible to another expression, or reducible to an error.  The reduction of a subexpression is the reduction of its parent expression.  If a subexpression reduces to an error, its parent expression reduces to the error.  In some cases, the syntactic form of a subexpression must be determined to reduce its parent expression.  Determining the unique type of a subexpression determines its syntactic form.
 
-\input{proof/lemmas/progress/inversion.tex}
+\input{proof/lemmas/inversion.tex}
 
-\input{proof/lemmas/progress/uniqueness-of-types.tex}
+\input{proof/lemmas/uniqueness-of-types.tex}
 
-\input{proof/lemmas/progress/canonical-forms.tex}
+\input{proof/lemmas/canonical-forms.tex}
 
 \input{proof/theorems/progress/haskell.tex}
 
@@ -28,17 +28,17 @@ Preservation will be proven by cases on the reduction rules.  In each case, the 
 
 If $e_{A}^{1}$ is substituted for free occurrences of $x$ within $e_{A}^{2}$, $e_{A}^{1}$ and $x$ have the same type, and the result has the same type as $e_{A}^{2}$, where $A\in\lbrace H,M,S\rbrace$.
 
-\input{proof/lemmas/preservation/expression-substitution.tex}
+\input{proof/lemmas/expression-substitution.tex}
 
 \subsection{Type Substitution Lemma}
 
 If $T_{1}$ is substituted for free occurrences of $X$ within $e_{A}$ of type $T_{2}$, the type of the result is $T_{1}$ substituted for free occurrences of $X$ within $T_{2}$, where $A\in\lbrace H,M\rbrace$.
 
-\input{proof/lemmas/preservation/type-substitution.tex}
+\input{proof/lemmas/type-substitution.tex}
 
 \subsection{Evaluation Context Lemma}
 
-\input{proof/lemmas/preservation/evaluation-context.tex}
+\input{proof/lemmas/evaluation-context.tex}
 
 \subsection{Preservation Theorem}
 
