Minor corrections to numbering. Fixed S ps header.

--- a/proof/theorems/progress/haskell.tex
+++ b/proof/theorems/progress/haskell.tex
@@ -2,11 +2,11 @@
 
 \label{thmpsh}
 
-If \judeh{}{\varexph}{\vartyh} then \pshyp{\first{\varexph}}{\second{\varexph}}.
+If \judeh{}{\first{\varexph}}{\vartyh} then \pshyp{\first{\varexph}}{\second{\varexph}}.
 
 \begin{proof}
 
-By structural induction on \varexph.
+By structural induction on \first{\varexph}.
 
 % \x:t.e
 
