--- a/proof/theorems/progress/ml.tex
+++ b/proof/theorems/progress/ml.tex
@@ -2,11 +2,11 @@
 
 \label{thmpsm}
 
-If \judem{}{\varexpm}{\vartym} then \pshyp{\first{\varexpm}}{\second{\varexpm}}.
+If \judem{}{\first{\varexpm}}{\vartym} then \pshyp{\first{\varexpm}}{\second{\varexpm}}.
 
 \begin{proof}
 
-By structural induction on \varexpm.  Cases similar to Haskell cases are omitted.
+By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are omitted.
 
 % cons w w
 
