Changed 'forced value' to 'unforced value' in the proof.

--- a/proof/lemmas/canonical-forms.tex
+++ b/proof/lemmas/canonical-forms.tex
@@ -4,7 +4,7 @@ The types of Haskell and ML values determine their syntactic forms.
 
 \label{lemcan}
 
-The syntactic forms of \profvs for each type.
+The syntactic forms of \prouvs for each type.
 
 \begin{enumerate}
 
