--- a/proof/theorems/progress/haskell.tex
+++ b/proof/theorems/progress/haskell.tex
@@ -14,7 +14,7 @@ By structural induction on \first{\varexph}.
 
 \begin{case}{\psfabss}
 
-\psfabss is a \profv.
+\psfabss is an \prouv.
 
 \end{case}
 
@@ -24,7 +24,7 @@ By structural induction on \first{\varexph}.
 
 \begin{case}{\pstabs}
 
-\pstabs is a \profv.
+\pstabs is an \prouv.
 
 \end{case}
 
@@ -34,7 +34,7 @@ By structural induction on \first{\varexph}.
 
 \begin{case}{\psnum}
 
-\psnum is a \profv.
+\psnum is an \prouv.
 
 \end{case}
 
@@ -44,7 +44,7 @@ By structural induction on \first{\varexph}.
 
 \begin{case}{\psnils}
 
-\psnils is a \profv.
+\psnils is an \prouv.
 
 \end{case}
 
@@ -54,7 +54,7 @@ By structural induction on \first{\varexph}.
 
 \begin{case}{\psconsh}
 
-\psconsh is a \profv.
+\psconsh is an \prouv.
 
 \end{case}
 
@@ -335,7 +335,7 @@ Cannot occur because \varexph is closed.
 
 \begin{subcase}{\first{\vartyh} $=$ \tylump}
 
-\exphm{\tylump}{\first{\vartym}}{\first{\varexpm}} is a \profv.
+\exphm{\tylump}{\first{\vartym}}{\first{\varexpm}} is an \prouv.
 
 \end{subcase}
 
@@ -462,7 +462,7 @@ Cannot occur because \varexph is closed.
 
 \begin{subcase}{\cslump}
 
-\exphs{\cslump}{\first{\varexps}} is a \profv.
+\exphs{\cslump}{\first{\varexps}} is an \prouv.
 
 \end{subcase}
 
