--- a/proof/theorems/progress/ml.tex
+++ b/proof/theorems/progress/ml.tex
@@ -14,7 +14,7 @@ By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are
 
 \begin{case}{\psconswm}
 
-\psconswm is a \profv.
+\psconswm is an \prouv.
 
 \end{case}
 
@@ -89,7 +89,7 @@ By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are
 \psvaliftwo
 {\first{\varexpm}}
 {\second{\varexpm}}
-{\psconsem is a \profv.}
+{\psconsem is an \prouv.}
 
 \end{case}
 
