--- a/macros.tex
+++ b/macros.tex
@@ -205,8 +205,8 @@
 \newcommand{\proinv}{inversion lemma\xspace}
 \newcommand{\prouni}{uniqueness of types lemma\xspace}
 \newcommand{\procan}{canonical forms lemma\xspace}
-\newcommand{\profv}{forced value\xspace}
-\newcommand{\profvs}{\profv{}s\xspace}
+\newcommand{\prouv}{unforced value\xspace}
+\newcommand{\prouvs}{\prouv{}s\xspace}
 
 % Errors
 
@@ -220,17 +220,17 @@
 
 % Progress
 
-\newcommand{\pscasesone}[3]{If #1 is a \profv then #2 determines the reduction of #3.}
-\newcommand{\pscasestwo}[4]{If #1 is a \profv then #2 and #3 determine the reduction of #4.}
+\newcommand{\pscasesone}[3]{If #1 is an \prouv then #2 determines the reduction of #3.}
+\newcommand{\pscasestwo}[4]{If #1 is an \prouv then #2 and #3 determine the reduction of #4.}
 
 \newcommand{\pserr}[2]{If #1 \red \emph{\experr{\varstr}} then #2 \red \emph{\experr{\varstr}}.}
-\newcommand{\pserrand}[3]{If #1 \red \emph{\experr{\varstr}} and #2 is a \profv then #3 \red \emph{\experr{\varstr}}.}
+\newcommand{\pserrand}[3]{If #1 \red \emph{\experr{\varstr}} and #2 is an \prouv then #3 \red \emph{\experr{\varstr}}.}
 
-\newcommand{\pshyp}[2]{#1 is a \profv or #1 \red #2 or #1 \red \emph{\experr{\varstr}}}
+\newcommand{\pshyp}[2]{#1 is an \prouv or #1 \red #2 or #1 \red \emph{\experr{\varstr}}}
 \newcommand{\pshypby}[2]{\pshyp{#1}{#2} by the induction hypothesis.}
 
 \newcommand{\pssub}[4]{If #1 \red #2 then #3 \red #4.}
-\newcommand{\pssuband}[5]{If #1 \red #2 and #3 is a \profv then #4 \red #5.}
+\newcommand{\pssuband}[5]{If #1 \red #2 and #3 is an \prouv then #4 \red #5.}
 
 \newcommand{\psred}[2]{\redrule{#1}{#2}.}
 \newcommand{\psrednote}[3]{\redrule{#1}{#2} $(#3)$.}
@@ -242,8 +242,8 @@
 \newcommand{\psvaleqm}[3]{\psvalm{#1}{#2}{#1 $=$ #3}}
 \newcommand{\psvalinh}[3]{\psvalh{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
 \newcommand{\psvalinm}[3]{\psvalm{#1}{#2}{$#1 \in \lbrace #3 \rbrace$}}
-\newcommand{\psvalifone}[2]{If #1 is a \profv then #2}
-\newcommand{\psvaliftwo}[3]{If #1 and #2 are \profvs then #3}
+\newcommand{\psvalifone}[2]{If #1 is an \prouv then #2}
+\newcommand{\psvaliftwo}[3]{If #1 and #2 are \prouvs then #3}
 \newcommand{\psvalifeqh}[3]{\psvalifone{#1}{\psvaleqh{#1}{#2}{#3}}}
 \newcommand{\psvalifeqm}[3]{\psvalifone{#1}{\psvaleqm{#1}{#2}{#3}}}
 \newcommand{\psvalifinh}[3]{\psvalifone{#1}{\psvalinh{#1}{#2}{#3}}}
