Removed the impl chapter. Removed the pn subsections. Changed the pn lemma titles.

--- a/chapter-4.tex
+++ b/chapter-4.tex
@@ -1,7 +1,13 @@
-\chapter{Implementation}
+\chapter{Related Work}
 
-The model was implemented in the DrScheme integrated development environment.  Languages are separated into modules that export sets of definitions, one for each language to import.  Haskell and ML modules are written in subsets of their real syntaxes and compile to equivalent Scheme modules.  Scheme modules are written in a subset of their real syntax.  Type soundness is violated if Scheme modules use language constructs (variable mutation, for example) or export values (non-integer numbers, for example) not supported by the system of interoperation.  Haskell can import ML and Scheme exports, ML can import Scheme exports, and Scheme can import Haskell exports.  Haskell and ML use let-polymorphism instead of System F and use type reconstruction.  All languages use integers as their number domain.  In addition to the model, all languages have boolean values and operations, multiplication and division operations, and lists.  Haskell and Scheme have user-defined composite data types.  The ML implementation extends the implementation by Kinghorn \cite{kinghorn07}.
+This work extends the work of Kinghorn \cite{kinghorn07} by adding Haskell and lists to his model of computation, his proof of type soundness, and his implementation of the model.  Kinghorn extended the work of Matthews and Findler \cite{matthews07} by adding parametric polymorphism and parametricity to their model of computation, providing a more thorough proof of its type soundness, and implementing it with a fully-featured Scheme and a subset of Objective Caml, a dialect of ML.
 
-Languages interoperate by importing exports from other modules.  Importation expressions specify the names and types of exports and evaluate to them.  The Haskell expressions \texttt{:ml type "name"} and \texttt{:scheme type "name"} import ML and Scheme exports, respectively, where \texttt{type} is the expected type of the export and \texttt{name} is the export name.  The ML expression \texttt{name :G type} imports Scheme exports.  The Scheme expression \texttt{(:haskell "name" "type")} imports Haskell exports.  For example, \texttt{(:scheme a $\rightarrow$ a "identity") 0} imports the Scheme identity function to Haskell and applies it to zero.
+Guha et al. \cite{guha07} describe a system of parametric polymorphic contracts for higher-order functions that assign blame for contract violations and protect parametricity.  The system both ensures function arguments match the contract parameters and prevents functions from examining the types and values of their arguments. This work uses two separate mechanisms, boundary expressions and label types, to achieve the same result.
 
-The importation expressions verify that expected types match actual types.  The expected types of Haskell and ML exports can be validated immediately because their modules provide their actual types.  The actual types of Scheme exports are calculated and validated during run time by contracts \cite{findler02} that are implemented by a standard library.  The contracts also blame the language at fault for a type error \cite{findler02}.  If the actual type of a Scheme value does not match its expected type, Haskell or ML is at fault.  If the actual type of a Haskell or ML value does not match its expected type, Scheme is at fault.  If Scheme applies a Haskell or ML function to an argument of the wrong type, Scheme is at fault.  Haskell and ML cannot apply a Scheme function to an argument of the wrong type because the application would be ill-typed.
+Perhaps the most mainstream systems of interoperation are the Common Object Request Broker Architecture (CORBA), the Component Object Model (COM), and the .NET Framework, yet not one of them supports interoperation between Haskell, ML, and Scheme as this work does.  CORBA, COM, and the .NET Framework support the interoperation of static and dynamic type systems and strict evaluation, but not higher-order functions, parametric polymorphism, parametricity, or lazy evaluation \cite{omg04} \cite{microsoft07} \cite{ecma06}.
+
+Tobin-Hochstadt and Felleisen \cite{tobin-hochstadt06} describe a system of mechanically translating programs written in a dynamically-typed language to an equivalent form in a similar, statically-typed language.  The system has higher-order functions, static and dynamic type systems, and strict evaluation, but not parametric polymorphism, parametricity, or lazy evaluation.  The system enables the interoperation of higher-order functions, dynamic type systems, and strict evaluation, but not parametric polymorphism, parametricity, static type systems, or lazy evaluation.  It uses contracts for higher-order functions to assign blame to languages for type errors, which this model does not do.
+
+Henglein and Rehof \cite{henglein95} describe a system of polymorphic type inference for Scheme that infers types and run-time type operations, thereby giving a high-level translation from Scheme to ML.  ML programs cannot be translated to equivalent Scheme programs.  The system has higher-order functions, parametric polymorphism, parametricity, static and dynamic type systems, and strict evaluation, but not lazy evaluation.  The system enables the interoperation of higher-order functions, dynamic type systems, and strict evaluation, but not parametric polymorphism, parametricity, static type systems, or lazy evaluation.
+
+Benton \cite{benton05} describes a system of embedding dynamically-typed languages within the statically-typed language ML and projecting dynamically-typed values back into ML.  The system has higher-order functions, parametric polymorphism, parametricity, static and dynamic type systems, and strict evaluation, but does not have lazy evaluation.  The system enables the interoperation of higher-order functions, parametric polymorphism, static and dynamic type systems, and strict evaluation, but not parametricity or lazy evaluation.
