--- a/proof/lemmas/evaluation-context.tex
+++ b/proof/lemmas/evaluation-context.tex
@@ -1,7 +1,13 @@
-\begin{lemma}
-\label{ec}
+\begin{lemma}{Evaluation Context Preservation}
+
+\label{lemeva}
+
 If $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, and $\mathscr{E}[e_{A}^{1}]:T_{2}$ then $\mathscr{E}[e_{A}^{2}]:T_{2}$ where $A\in\lbrace H,M,S\rbrace$.
+
 \begin{proof}
+
 By structural induction.
+
 \end{proof}
+
 \end{lemma}
