--- a/proof/lemmas/type-substitution.tex
+++ b/proof/lemmas/type-substitution.tex
@@ -1,7 +1,13 @@
-\begin{lemma}
-\label{tes}
+\begin{lemma}{Type Substitution Preservation}
+
+\label{lemtyp}
+
 If $\Gamma,X\vdash_{A}e_{A}:T_{1}$ and $\Gamma\vdash_{A}T_{2}$ then $\Gamma\vdash_{A}e_{A}[T_{2}/X]:T_{1}[T_{2}/X]$ where $A\in\lbrace H,M\rbrace$.
+
 \begin{proof}
+
 By structural induction.
+
 \end{proof}
+
 \end{lemma}
