--- a/proof/theorems/progress/ml.tex
+++ b/proof/theorems/progress/ml.tex
@@ -93,6 +93,16 @@ By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are
 
 \end{case}
 
+% mh t t e
+
+\begin{case}{}
+
+If \varconm 
+
+
+
+\end{case}
+
 \end{proof}
 
 \end{theorem}
