--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -1,6 +1,6 @@
-\begin{theorem}
+\begin{theorem}{Preservation}
 
-\label{pn}
+\label{thmpre}
 
 If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
 
