Changed 'w' to 'v', vice versa, and changed H to use unforced values instead of forced ones.  This is to match the ps proof.

--- a/macros.tex
+++ b/macros.tex
@@ -51,8 +51,8 @@
 \newcommand{\symtst}{TST}
 \newcommand{\symty}{t}
 \newcommand{\symtyvar}{u}
-\newcommand{\symvalf}{v}
-\newcommand{\symvalu}{w}
+\newcommand{\symvalf}{w}
+\newcommand{\symvalu}{v}
 \newcommand{\symvar}{x}
 \newcommand{\symwrong}{wrong}
 
@@ -80,9 +80,9 @@
 \newcommand{\varstr}{\ensuremath{\formvar{\symstr}}\xspace}
 \newcommand{\vartyh}{\ensuremath{\symty\langh}\xspace}
 \newcommand{\vartym}{\ensuremath{\symty\langm}\xspace}
+\newcommand{\varvaluh}{\ensuremath{\symvalu\langh}\xspace}
 \newcommand{\varvalum}{\ensuremath{\symvalu\langm}\xspace}
 \newcommand{\varvalus}{\ensuremath{\symvalu\langs}\xspace}
-\newcommand{\varvalfh}{\ensuremath{\symvalf\langh}\xspace}
 \newcommand{\varvalfm}{\ensuremath{\symvalf\langm}\xspace}
 \newcommand{\varvalfs}{\ensuremath{\symvalf\langs}\xspace}
 \newcommand{\varvarh}{\ensuremath{\symvar\langh}\xspace}
