--- a/proof/lemmas/canonical-forms.tex
+++ b/proof/lemmas/canonical-forms.tex
@@ -12,23 +12,23 @@ The syntactic forms of \prouvs for each type.
 
 % L
 
-\item If \judeh{\env}{\varvalfh}{\tylump} then $\varvalfh \in \lbrace \exphm{\tylump}{\vartym}{\varvalfm}, \exphs{\cslump}{\varvalfs} \rbrace$.
+\item If \judeh{\env}{\varvaluh}{\tylump} then $\varvaluh \in \lbrace \exphm{\tylump}{\vartym}{\varvalfm}, \exphs{\cslump}{\varvalfs} \rbrace$.
 
 % N
 
-\item If \judeh{\env}{\varvalfh}{\tynum} then $\varvalfh = \expnum{\symnum}$.
+\item If \judeh{\env}{\varvaluh}{\tynum} then $\varvaluh = \expnum{\symnum}$.
 
 % {t}
 
-\item If \judeh{\env}{\varvalfh}{\tylist{\vartyh}} then $\varvalfh \in \lbrace \expnils{\vartyh}, \expcons{\first{\varexph}}{\second{\varexph}} \rbrace$.
+\item If \judeh{\env}{\varvaluh}{\tylist{\vartyh}} then $\varvaluh \in \lbrace \expnils{\vartyh}, \expcons{\first{\varexph}}{\second{\varexph}} \rbrace$.
 
 % t->t
 
-\item If \judeh{\env}{\varvalfh}{\tyfun{\first{\vartyh}}{\second{\vartyh}}} then $\varvalfh = \expfabss{\varvarh}{\first{\vartyh}}{\varexph}$.
+\item If \judeh{\env}{\varvaluh}{\tyfun{\first{\vartyh}}{\second{\vartyh}}} then $\varvaluh = \expfabss{\varvarh}{\first{\vartyh}}{\varexph}$.
 
 % Au.t
 
-\item If \judeh{\env}{\varvalfh}{\tyfor{\tyvarh}{\vartyh}} then $\varvalfh = \exptabs{\tyvarh}{\varexph}$.
+\item If \judeh{\env}{\varvaluh}{\tyfor{\tyvarh}{\vartyh}} then $\varvaluh = \exptabs{\tyvarh}{\varexph}$.
 
 % ML
 
