Added a new macro.  Revised the S fapp case.

--- a/macros.tex
+++ b/macros.tex
@@ -229,6 +229,8 @@
 \newcommand{\pshyp}[2]{#1 is an \prouv or #1 \red #2 or #1 \red \emph{\experr{\varstr}}}
 \newcommand{\pshypby}[2]{\pshyp{#1}{#2} by the induction hypothesis.}
 
+\newcommand{\psother}[2]{#1 and #2 are \prouvs otherwise.}
+
 \newcommand{\pssub}[4]{If #1 \red #2 then #3 \red #4.}
 \newcommand{\pssuband}[5]{If #1 \red #2 and #3 is an \prouv then #4 \red #5.}
 
