--- a/proof/theorems/progress/ml.tex
+++ b/proof/theorems/progress/ml.tex
@@ -8,6 +8,16 @@ If \judem{}{\first{\varexpm}}{\vartym} then \pshyp{\first{\varexpm}}{\second{\va
 
 By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are omitted.
 
+% cons v v
+
+\newcommand{\psconswm}{\expcons{\first{\varvalum}}{\second{\varvalum}}\xspace}
+
+\begin{case}{\psconswm}
+
+\psconswm is an \prouv.
+
+\end{case}
+
 % mh t t e
 
 \newcommand{\psmh}{\expmh{\first{\vartym}}{\first{\vartyh}}{\first{\varexph}}\xspace}
@@ -39,16 +49,6 @@ TODO
 \pserr
 {\first{\varexph}}
 {\psmh}
-
-\end{case}
-
-% cons w w
-
-\newcommand{\psconswm}{\expcons{\first{\varvalum}}{\second{\varvalum}}\xspace}
-
-\begin{case}{\psconswm}
-
-\psconswm is an \prouv.
 
 \end{case}
 
