New macro.  Removed some duplicate ML and Scheme cases.  Some reordering too, I think.

--- a/macros.tex
+++ b/macros.tex
@@ -235,6 +235,7 @@
 \newcommand{\pssuband}[5]{If #1 \red #2 and #3 is an \prouv then #4 \red #5.}
 
 \newcommand{\psred}[2]{\redrule{#1}{#2}.}
+\newcommand{\psredif}[4]{If #1 and #2 are \prouvs then \psred{#1}{#2}}
 \newcommand{\psrednote}[3]{\redrule{#1}{#2} $(#3)$.}
 
 \newcommand{\psval}[2]{#1 by lemmas \ref{leminv} and \ref{lemuni} and #2 by lemma \ref{lemcan}.}
